# telegram-bot-template

./: .env  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml
config/: .secrets.example.yaml  settings.yaml
deploy/: docker-compose.dev.yaml  docker-compose.yaml  telegram.Dockerfile
src/application/common/: unit_of_work.py
src/application/common/repositories/: user.py
src/application/create_user/: interactor.py
src/domain/user/: entity.py
src/infrastructure/: config.py
src/infrastructure/database/: models.py  unit_of_work.py
src/infrastructure/database/migrations/: env.py
src/infrastructure/database/migrations/versions/: 58515d378eea_feat_users.py
src/infrastructure/database/repositories/: user.py
src/presentation/telegram/: __main__.py  states.py
src/presentation/telegram/di/: providers.py
src/presentation/telegram/start/: dialog.py
