[tool.poetry]
name = "telegrambottemplate"
version = "0.1.0"
description = ""
authors = ["YarQR <rosya6721@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
mypy = "^1.10.1"


[tool.poetry.group.infra.dependencies]
dynaconf = "^3.2.5"
adaptix = "^3.0.0b7"
alembic = "^1.13.2"
sqlalchemy = "^2.0.31"
asyncpg = "^0.29.0"


[tool.poetry.group.telegram.dependencies]
aiogram-dialog = "^2.1.0"
dishka = "^1.2.0"
redis = "^5.0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
